--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ project(sylar)
 
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_VERBOSE_MAKEFILE ON)
+set(CMAKE_CXX_FLAGS "$ENV{CXXFLAGS} -ggdb -std=c++11 -Wall -Wno-deprecated -Werror -Wno-unused-function -Wno-builtin-macro-redefined -Wno-deprecated-declarations")
 
 set(LIB_SRC
         src/log/log.cpp
@@ -12,6 +13,7 @@ set(LIB_SRC
 add_library(sylar SHARED ${LIB_SRC})
 add_executable(test tests/test.cpp)
 INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src)
+# INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})
 # INCLUDE_DIRECTORIES(${PROJECT_BINARY_DIR}/include)
 LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib)
 target_link_libraries(test sylar)
